force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_System_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_System_Error_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>System Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>