force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_Third_Party_Consent__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Third_Party_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Third Party Consent</label>
    <type>Checkbox</type>
</CustomField>