force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_Time_To_Fill__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Time_To_Fill__c</fullName>
    <label>Time To Fill</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>