force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Transaction_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transaction Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>