force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_Written_Quantity__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Written_Quantity__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Written Quantity</label>
    <length>4</length>
    <type>Text</type>
</CustomField>