force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/XCDC_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>XCDC_ExternalId__c</fullName>
    <description>This field is used to enter the ID for the record between two integrated orgs. The prefix org indicates source org for the record.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Org External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>