force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/XCDC_LastUserModTime__c.field-meta.xml
<CustomField>
    <fullName>XCDC_LastUserModTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>XCDC_LastUserModTime</label>
    <type>DateTime</type>
</CustomField>