force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/XCDC_ParentReferences__c.field-meta.xml
<CustomField>
    <fullName>XCDC_ParentReferences__c</fullName>
    <formula>&apos;{&quot;PatientId&quot;:&quot;&apos;+ OrgSync_Patient__r.XCDC_ExternalId__c +&apos;&quot;}&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>XCDC_ParentReferences</label>
    <type>Text</type>
</CustomField>