force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/XCDC_StateField__c.field-meta.xml
<CustomField>
    <fullName>XCDC_StateField__c</fullName>
    <description>Used to hold the mandatory fields to support CDC</description>
    <encryptionScheme>None</encryptionScheme>
    <label>XCDC StateField</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>