force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/XCDC_Stream_Index__c.field-meta.xml
<CustomField>
    <fullName>XCDC_Stream_Index__c</fullName>
    <description>This field is used to store the index value for each record for the filterered channels.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Stream Index</label>
    <length>255</length>
    <type>Text</type>
</CustomField>